# helper-tools

./: .gitignore  config.yaml  flake.nix  pyproject.toml
.github/workflows/: flake-update.yaml
data/:  README.md  podman-sops.yaml  py-backup.yaml
data/motd/: update.json
data/motd/services/: failed  running  succeeded
data/py-backup/: config.toml
data/py-motd/: backup.json  config.toml  update.json
nix/: devshell.nix  package.nix
nix/modules/home/: helper-tools.nix  py-motd.nix  py_motd.nix
nix/modules/nixos/: backup.nix  helper-tools.nix  podman-sops.nix  py-backup.nix  secret.nix  sops-podman.nix
nix/modules/nixos/py-backup/: config.nix  default.nix
py_backup/: __main__.py
py_motd/: __main__.py
py_motd/modules/: backup.py  update.py
sops_podman/: __main__.py
src/helper_tools/: __main__.py
src/helper_tools/backup/: command.py  snapshot.py
src/helper_tools/deploy/: command.py
src/helper_tools/motd/: command.py  utils.py
src/helper_tools/motd/modules/: __init__.py  backup.py  flake.py  services.py  system.py  update.py
src/helper_tools/secret/: command.py
src/podman_sops/: __main__.py
src/py_backup/: __main__.py  snapshot.py
src/py_motd/: __main__.py  lib.py  utils.py
src/py_motd/modules/: backup.py  services.py  system.py  update.py
