[project]
name = "helper-tools"
version = "3.2.1"
description = "Tools for automating/enhancing NixOS (and other) system tasks."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=14.3.3",
    "pydantic-settings>=2.14.2",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3"
]

[project.scripts]
helper-tools = "helper_tools.__main__:main"


[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"

